setcchar - don't lose combining marks to a typo.

We copy len wchars but set the length field to 1, instead of len.
From Naman Jain in PR lib/55443